:bug: network selector cropped

--- a/src/components/Elements/Selector/classes.module.scss
+++ b/src/components/Elements/Selector/classes.module.scss
@@ -28,6 +28,7 @@
     text-align: left;
     text-transform: none;
     position: relative;
+    height: 36px;
   }
 
   select {
